--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open",
+    "start": "webpack serve --mode development --hot"
   },
   "author": "",
   "license": "ISC",
